--- a/interface/lib/plugins/nextcloud_plugin/templates/server_config_edit.htm
+++ b/interface/lib/plugins/nextcloud_plugin/templates/server_config_edit.htm
@@ -5,6 +5,15 @@
 </div>
 
 <div class="form-group">
+    <label for="nc_enabled" class="col-sm-3 control-label">
+        {tmpl_var name='nc_enabled_txt'}
+    </label>
+    <div class="col-sm-9">
+        {tmpl_var name='nc_enabled'}
+    </div>
+</div>
+
+<div class="form-group">
     <label for="nc_account" class="col-sm-3 control-label">
         {tmpl_var name='nc_account_txt'}
     </label>
